name:                tweet
version:             1.0
synopsis:            Report basic twitter stats from sample stream.
-- description:
homepage:            https://github.com/githubuser/tweet#readme
license:             BSD3
license-file:        LICENSE
author:              David McHealy
maintainer:          david.mchealy@gmail.com
copyright:           2017 David McHealy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tweet
  ghc-options: -Wall -O2 -threaded -Wincomplete-uni-patterns -Wincomplete-record-updates
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Twitter, Stats, Tweet, Command, Types, Rate, TopList, Emoji, EmojiData
  default-extensions: TypeApplications LambdaCase OverloadedStrings
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , twitter-conduit >= 0.2
    , conduit >= 1.2 && < 2.0
    , text >= 1.2 && < 2.0
    , twitter-types >= 0.7
    , resourcet
    , stm >= 2.4 && < 3.0
    , async >= 2.1 && < 3.0
    , containers >= 0.5
    , aeson >= 1.1 && < 2.0
    , bytestring >= 0.10
    , template-haskell >= 2.0 && < 3.0
    , network-uri >= 2.6 && < 3.0
    , config-ini >= 0.1.2 && < 0.2.0
